Fixes spacing issue with headlines on post without art at mobile sizes.

--- a/src/sass/partials/_blog.scss
+++ b/src/sass/partials/_blog.scss
@@ -89,9 +89,6 @@ h3 {
 	width:100%;
 	position:absolute;
 	bottom:0;
-	@media screen and (max-width:em(550)) {
-		bottom:rem(525);
-	}
 }
 .blog-more-button {
 	margin:0 auto;
