--- a/src/sass/partials/_index_page_preload.scss
+++ b/src/sass/partials/_index_page_preload.scss
@@ -27,7 +27,7 @@
 			@media screen and (max-width:em(430)) {
 			height:rem(70);
 			width:rem(280);
-			margin:rem(30);
+			margin:rem(50) rem(30) rem(20);
 			}
 }
 .nav-list--display {
